fix(esl-tabs): fix alignment behavoir

--- a/src/modules/esl-tab/core/esl-tabs.scrollable.less
+++ b/src/modules/esl-tab/core/esl-tabs.scrollable.less
@@ -1,4 +1,4 @@
-esl-tabs[scrollable]:not(.disabled-alignment) {
+esl-tabs[scrollable]:not([scrollable='disabled']) {
   display: flex;
   align-items: center;
 
